--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Marsh0333's Guide to RollerCoin</title>
   </head>
   <body>
-	<p> Hellow World! </p>
+	<p> Hello World! </p>
   </body>
 </html>
