--- a/index.htm
+++ b/index.htm
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple HTML Calculation form</title>
+    <title>RollerCoin Calculator</title>
   </head>
   <body>
     <table id="example" class="display" style="width:100%">
       <thead>
       <tr>
         <th> </th>
-        <th>Token Blaster</th>
-        <th>Flappy Rocket</th>
+        <th>Select Current Lvl</th>
       </tr>
       </thead>
       <tbody>
       <tr>
-        <td>Select Current Lvl</td>
+        <td>Token Blaster</td>
         <td><select size="1" id="Token-lvl" name="Token-lvl">
           <option value="1" selected="selected"> 1 </option>
           <option value ="2"> 2 </option>
@@ -26,9 +25,11 @@
           <option value ="8"> 8 </option>
           <option value ="9"> 9 </option>
           <option value ="10"> 10 </option>
-          </select>
-        </td>
-        <td><select size="1" id="Flappy-lvl" name="Flappy-lvl">
+          </select></td>
+        </tr>
+        <tr>
+          <td>Flappy Rocket</td>
+          <td><select size="1" id="Flappy-lvl" name="Flappy-lvl">
           <option value="1" selected="selected"> 1 </option>
           <option value ="2"> 2 </option>
           <option value ="3"> 3 </option>
@@ -39,10 +40,8 @@
           <option value ="8"> 8 </option>
           <option value ="9"> 9 </option>
           <option value ="10"> 10 </option>
-          </select>
-        </td>
-      </tr>
-        
+          </select></td>
+        </tr>
       </tbody>
     </table>
     
