--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
       <thead>
       <tr>
         <th> </th>
-        <th>Select Current Lvl</th>
+        <th align="left">Select Current Lvl</th>
       </tr>
       </thead>
       <tbody>
