--- a/index.htm
+++ b/index.htm
@@ -12,9 +12,24 @@
       </tr>
       </thead>
       <tbody>
+        <tr>
+        <td>Coinclick</td>
+        <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl">
+          <option value="1" selected="selected"> 1 </option>
+          <option value ="2"> 2 </option>
+          <option value ="3"> 3 </option>
+          <option value ="4"> 4 </option>
+          <option value ="5"> 5 </option>
+          <option value ="6"> 6 </option>
+          <option value ="7"> 7 </option>
+          <option value ="8"> 8 </option>
+          <option value ="9"> 9 </option>
+          <option value ="10"> 10 </option>
+          </select></td>
+        </tr>
       <tr>
         <td>Token Blaster</td>
-        <td><select size="1" id="Token-lvl" name="Token-lvl">
+        <td><select size="1" id="Blaster-lvl" name="Blaster-lvl">
           <option value="1" selected="selected"> 1 </option>
           <option value ="2"> 2 </option>
           <option value ="3"> 3 </option>
@@ -30,6 +45,111 @@
         <tr>
           <td>Flappy Rocket</td>
           <td><select size="1" id="Flappy-lvl" name="Flappy-lvl">
+          <option value="1" selected="selected"> 1 </option>
+          <option value ="2"> 2 </option>
+          <option value ="3"> 3 </option>
+          <option value ="4"> 4 </option>
+          <option value ="5"> 5 </option>
+          <option value ="6"> 6 </option>
+          <option value ="7"> 7 </option>
+          <option value ="8"> 8 </option>
+          <option value ="9"> 9 </option>
+          <option value ="10"> 10 </option>
+          </select></td>
+        </tr>
+        <tr>
+        <td>Cryptonoid</td>
+        <td><select size="1" id="Cryptonoid-lvl" name="Cryptonoid-lvl">
+          <option value="1" selected="selected"> 1 </option>
+          <option value ="2"> 2 </option>
+          <option value ="3"> 3 </option>
+          <option value ="4"> 4 </option>
+          <option value ="5"> 5 </option>
+          <option value ="6"> 6 </option>
+          <option value ="7"> 7 </option>
+          <option value ="8"> 8 </option>
+          <option value ="9"> 9 </option>
+          <option value ="10"> 10 </option>
+          </select></td>
+        </tr>
+        <tr>
+        <td>Coin-Match</td>
+        <td><select size="1" id="Match-lvl" name="Match-lvl">
+          <option value="1" selected="selected"> 1 </option>
+          <option value ="2"> 2 </option>
+          <option value ="3"> 3 </option>
+          <option value ="4"> 4 </option>
+          <option value ="5"> 5 </option>
+          <option value ="6"> 6 </option>
+          <option value ="7"> 7 </option>
+          <option value ="8"> 8 </option>
+          <option value ="9"> 9 </option>
+          <option value ="10"> 10 </option>
+          </select></td>
+        </tr>
+        <tr>
+        <td>Crypto Hamster</td>
+        <td><select size="1" id="Crypto-lvl" name="Crypto-lvl">
+          <option value="1" selected="selected"> 1 </option>
+          <option value ="2"> 2 </option>
+          <option value ="3"> 3 </option>
+          <option value ="4"> 4 </option>
+          <option value ="5"> 5 </option>
+          <option value ="6"> 6 </option>
+          <option value ="7"> 7 </option>
+          <option value ="8"> 8 </option>
+          <option value ="9"> 9 </option>
+          <option value ="10"> 10 </option>
+          </select></td>
+        </tr>
+        <tr>
+        <td>2048 Coins</td>
+        <td><select size="1" id="2048-lvl" name="2048-lvl">
+          <option value="1" selected="selected"> 1 </option>
+          <option value ="2"> 2 </option>
+          <option value ="3"> 3 </option>
+          <option value ="4"> 4 </option>
+          <option value ="5"> 5 </option>
+          <option value ="6"> 6 </option>
+          <option value ="7"> 7 </option>
+          <option value ="8"> 8 </option>
+          <option value ="9"> 9 </option>
+          <option value ="10"> 10 </option>
+          </select></td>
+        </tr>
+        <tr>
+        <td>Coin-Flip</td>
+        <td><select size="1" id="Flip-lvl" name="Flip-lvl">
+          <option value="1" selected="selected"> 1 </option>
+          <option value ="2"> 2 </option>
+          <option value ="3"> 3 </option>
+          <option value ="4"> 4 </option>
+          <option value ="5"> 5 </option>
+          <option value ="6"> 6 </option>
+          <option value ="7"> 7 </option>
+          <option value ="8"> 8 </option>
+          <option value ="9"> 9 </option>
+          <option value ="10"> 10 </option>
+          </select></td>
+        </tr>
+        <tr>
+        <td>Dr. Hamster</td>
+        <td><select size="1" id="Dr-lvl" name="Dr-lvl">
+          <option value="1" selected="selected"> 1 </option>
+          <option value ="2"> 2 </option>
+          <option value ="3"> 3 </option>
+          <option value ="4"> 4 </option>
+          <option value ="5"> 5 </option>
+          <option value ="6"> 6 </option>
+          <option value ="7"> 7 </option>
+          <option value ="8"> 8 </option>
+          <option value ="9"> 9 </option>
+          <option value ="10"> 10 </option>
+          </select></td>
+        </tr>
+        <tr>
+        <td>Token Surfer</td>
+        <td><select size="1" id="Surfer-lvl" name="Surfer-lvl">
           <option value="1" selected="selected"> 1 </option>
           <option value ="2"> 2 </option>
           <option value ="3"> 3 </option>
