--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
       <tbody>
         <tr>
         <td>Coinclick</td>
-        <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl">
+        <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl" onchange="getSelectValue();">
           <option value="1" selected="selected"> 1 </option>
           <option value ="2"> 2 </option>
           <option value ="3"> 3 </option>
