--- a/index.htm
+++ b/index.htm
@@ -9,22 +9,23 @@
       <tr>
         <th> </th>
         <th align="left">Select Current Lvl</th>
+        <th align="left">Points Per Win</th>
       </tr>
       </thead>
       <tbody>
         <tr>
         <td>Coinclick</td>
         <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl" onchange="getSelectValue();">
-          <option value="1" selected="selected"> 1 </option>
-          <option value ="2"> 2 </option>
-          <option value ="3"> 3 </option>
-          <option value ="4"> 4 </option>
-          <option value ="5"> 5 </option>
-          <option value ="6"> 6 </option>
-          <option value ="7"> 7 </option>
-          <option value ="8"> 8 </option>
-          <option value ="9"> 9 </option>
-          <option value ="10"> 10 </option>
+          <option value="600" selected="selected"> 1 </option>
+          <option value ="640"> 2 </option>
+          <option value ="680"> 3 </option>
+          <option value ="700"> 4 </option>
+          <option value ="720"> 5 </option>
+          <option value ="780"> 6 </option>
+          <option value ="800"> 7 </option>
+          <option value ="820"> 8 </option>
+          <option value ="840"> 9 </option>
+          <option value ="880"> 10 </option>
           </select></td>
           <td><input type="text" name="lvl" id="lvl" onClick="checkPrice()"></td>
         </tr>
