--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
           <option value ="840"> 9 </option>
           <option value ="880"> 10 </option>
           </select></td>
-          <td><input type="text" name="lvl" id="lvl" onClick="checkPrice()"></td>
+          <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Coinclick-lvl').innerHTML"></td>
         </tr>
       <tr>
         <td>Token Blaster</td>
