--- a/index.htm
+++ b/index.htm
@@ -32,137 +32,146 @@
       <tr>
         <td>Token Blaster</td>
         <td><select size="1" id="Blaster-lvl" name="Blaster-lvl">
-          <option value="1" selected="selected"> 1 </option>
-          <option value ="2"> 2 </option>
-          <option value ="3"> 3 </option>
-          <option value ="4"> 4 </option>
-          <option value ="5"> 5 </option>
-          <option value ="6"> 6 </option>
-          <option value ="7"> 7 </option>
-          <option value ="8"> 8 </option>
-          <option value ="9"> 9 </option>
-          <option value ="10"> 10 </option>
+          <option value="700" selected="selected"> 1 </option>
+          <option value ="756"> 2 </option>
+          <option value ="812"> 3 </option>
+          <option value ="896"> 4 </option>
+          <option value ="957"> 5 </option>
+          <option value ="1023"> 6 </option>
+          <option value ="1075"> 7 </option>
+          <option value ="1138"> 8 </option>
+          <option value ="1200"> 9 </option>
+          <option value ="2400"> 10 </option>
           </select></td>
+         <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Blaster-lvl').innerHTML"></td>
         </tr>
         <tr>
           <td>Flappy Rocket</td>
           <td><select size="1" id="Flappy-lvl" name="Flappy-lvl">
-          <option value="1" selected="selected"> 1 </option>
-          <option value ="2"> 2 </option>
-          <option value ="3"> 3 </option>
-          <option value ="4"> 4 </option>
-          <option value ="5"> 5 </option>
-          <option value ="6"> 6 </option>
-          <option value ="7"> 7 </option>
-          <option value ="8"> 8 </option>
-          <option value ="9"> 9 </option>
-          <option value ="10"> 10 </option>
+          <option value="704" selected="selected"> 1 </option>
+          <option value ="768"> 2 </option>
+          <option value ="819"> 3 </option>
+          <option value ="882"> 4 </option>
+          <option value ="930"> 5 </option>
+          <option value ="992"> 6 </option>
+          <option value ="1037"> 7 </option>
+          <option value ="1098"> 8 </option>
+          <option value ="1140"> 9 </option>
+          <option value ="1200"> 10 </option>
           </select></td>
+           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Flappy-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Cryptonoid</td>
         <td><select size="1" id="Cryptonoid-lvl" name="Cryptonoid-lvl">
-          <option value="1" selected="selected"> 1 </option>
-          <option value ="2"> 2 </option>
-          <option value ="3"> 3 </option>
-          <option value ="4"> 4 </option>
-          <option value ="5"> 5 </option>
-          <option value ="6"> 6 </option>
-          <option value ="7"> 7 </option>
-          <option value ="8"> 8 </option>
-          <option value ="9"> 9 </option>
-          <option value ="10"> 10 </option>
+          <option value="912" selected="selected"> 1 </option>
+          <option value ="936"> 2 </option>
+          <option value ="984"> 3 </option>
+          <option value ="1008"> 4 </option>
+          <option value ="1032"> 5 </option>
+          <option value ="1080"> 6 </option>
+          <option value ="1472"> 7 </option>
+          <option value ="1504"> 8 </option>
+          <option value ="1568"> 9 </option>
+          <option value ="1600"> 10 </option>
           </select></td>
+           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Cryptonoid-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Coin-Match</td>
         <td><select size="1" id="Match-lvl" name="Match-lvl">
-          <option value="1" selected="selected"> 1 </option>
-          <option value ="2"> 2 </option>
-          <option value ="3"> 3 </option>
-          <option value ="4"> 4 </option>
-          <option value ="5"> 5 </option>
-          <option value ="6"> 6 </option>
-          <option value ="7"> 7 </option>
-          <option value ="8"> 8 </option>
-          <option value ="9"> 9 </option>
-          <option value ="10"> 10 </option>
+          <option value="720" selected="selected"> 1 </option>
+          <option value ="793"> 2 </option>
+          <option value ="806"> 3 </option>
+          <option value ="819"> 4 </option>
+          <option value ="832"> 5 </option>
+          <option value ="910"> 6 </option>
+          <option value ="924"> 7 </option>
+          <option value ="938"> 8 </option>
+          <option value ="1020"> 9 </option>
+          <option value ="1035"> 10 </option>
           </select></td>
+           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Match-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Crypto Hamster</td>
         <td><select size="1" id="Crypto-lvl" name="Crypto-lvl">
-          <option value="1" selected="selected"> 1 </option>
-          <option value ="2"> 2 </option>
-          <option value ="3"> 3 </option>
-          <option value ="4"> 4 </option>
-          <option value ="5"> 5 </option>
-          <option value ="6"> 6 </option>
-          <option value ="7"> 7 </option>
-          <option value ="8"> 8 </option>
-          <option value ="9"> 9 </option>
-          <option value ="10"> 10 </option>
+          <option value="900" selected="selected"> 1 </option>
+          <option value ="959"> 2 </option>
+          <option value ="1021"> 3 </option>
+          <option value ="1084"> 4 </option>
+          <option value ="1148"> 5 </option>
+          <option value ="Unknown"> 6 </option>
+          <option value ="Unknown"> 7 </option>
+          <option value ="Unknown"> 8 </option>
+          <option value ="Unknown"> 9 </option>
+          <option value ="Unknown"> 10 </option>
           </select></td>
+           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Crypto-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>2048 Coins</td>
         <td><select size="1" id="2048-lvl" name="2048-lvl">
-          <option value="1" selected="selected"> 1 </option>
-          <option value ="2"> 2 </option>
-          <option value ="3"> 3 </option>
-          <option value ="4"> 4 </option>
-          <option value ="5"> 5 </option>
-          <option value ="6"> 6 </option>
-          <option value ="7"> 7 </option>
-          <option value ="8"> 8 </option>
-          <option value ="9"> 9 </option>
-          <option value ="10"> 10 </option>
+          <option value="800" selected="selected"> 1 </option>
+          <option value ="850"> 2 </option>
+          <option value ="900"> 3 </option>
+          <option value ="950"> 4 </option>
+          <option value ="Unknown"> 5 </option>
+          <option value ="Unknown"> 6 </option>
+          <option value ="Unknown"> 7 </option>
+          <option value ="Unknown"> 8 </option>
+          <option value ="Unknown"> 9 </option>
+          <option value ="Unknown"> 10 </option>
           </select></td>
+           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('2048-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Coin-Flip</td>
         <td><select size="1" id="Flip-lvl" name="Flip-lvl">
-          <option value="1" selected="selected"> 1 </option>
-          <option value ="2"> 2 </option>
-          <option value ="3"> 3 </option>
-          <option value ="4"> 4 </option>
-          <option value ="5"> 5 </option>
-          <option value ="6"> 6 </option>
-          <option value ="7"> 7 </option>
-          <option value ="8"> 8 </option>
-          <option value ="9"> 9 </option>
-          <option value ="10"> 10 </option>
+          <option value="900" selected="selected"> 1 </option>
+          <option value ="912"> 2 </option>
+          <option value ="912"> 3 </option>
+          <option value ="1232"> 4 </option>
+          <option value ="1232"> 5 </option>
+          <option value ="1248"> 6 </option>
+          <option value ="1248"> 7 </option>
+          <option value ="1580"> 8 </option>
+          <option value ="1580"> 9 </option>
+          <option value ="1600"> 10 </option>
           </select></td>
+           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Flip-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Dr. Hamster</td>
         <td><select size="1" id="Dr-lvl" name="Dr-lvl">
-          <option value="1" selected="selected"> 1 </option>
-          <option value ="2"> 2 </option>
-          <option value ="3"> 3 </option>
-          <option value ="4"> 4 </option>
-          <option value ="5"> 5 </option>
-          <option value ="6"> 6 </option>
-          <option value ="7"> 7 </option>
-          <option value ="8"> 8 </option>
-          <option value ="9"> 9 </option>
-          <option value ="10"> 10 </option>
+          <option value="896" selected="selected"> 1 </option>
+          <option value ="981"> 2 </option>
+          <option value ="1059"> 3 </option>
+          <option value ="1132"> 4 </option>
+          <option value ="1198"> 5 </option>
+          <option value ="1259"> 6 </option>
+          <option value ="1313"> 7 </option>
+          <option value ="1362"> 8 </option>
+          <option value ="1404"> 9 </option>
+          <option value ="1440"> 10 </option>
           </select></td>
+           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Dr-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Token Surfer</td>
         <td><select size="1" id="Surfer-lvl" name="Surfer-lvl">
-          <option value="1" selected="selected"> 1 </option>
-          <option value ="2"> 2 </option>
-          <option value ="3"> 3 </option>
-          <option value ="4"> 4 </option>
-          <option value ="5"> 5 </option>
-          <option value ="6"> 6 </option>
-          <option value ="7"> 7 </option>
-          <option value ="8"> 8 </option>
-          <option value ="9"> 9 </option>
-          <option value ="10"> 10 </option>
+          <option value="840" selected="selected"> 1 </option>
+          <option value ="Unknown"> 2 </option>
+          <option value ="Unknown"> 3 </option>
+          <option value ="Unknown"> 4 </option>
+          <option value ="Unknown"> 5 </option>
+          <option value ="Unknown"> 6 </option>
+          <option value ="Unknown"> 7 </option>
+          <option value ="Unknown"> 8 </option>
+          <option value ="Unknown"> 9 </option>
+          <option value ="Unknown"> 10 </option>
           </select></td>
+           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Surfer-lvl').innerHTML"></td>
         </tr>
       </tbody>
     </table>
