--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
           <option value ="840"> 9 </option>
           <option value ="880"> 10 </option>
           </select></td>
-          <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Coinclick-lvl').innerHTML"></td>
+          <td><input type="text" name="CoinPoints" id="CoinPoints" onClick="getElementByID('Coinclick-lvl').innerHTML"></td>
         </tr>
       <tr>
         <td>Token Blaster</td>
@@ -43,7 +43,7 @@
           <option value ="1200"> 9 </option>
           <option value ="2400"> 10 </option>
           </select></td>
-         <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Blaster-lvl').innerHTML"></td>
+         <td><input type="text" name="BlasterPoints" id="BlasterPoints" onClick="getElementByID('Blaster-lvl').innerHTML"></td>
         </tr>
         <tr>
           <td>Flappy Rocket</td>
@@ -59,7 +59,7 @@
           <option value ="1140"> 9 </option>
           <option value ="1200"> 10 </option>
           </select></td>
-           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Flappy-lvl').innerHTML"></td>
+           <td><input type="text" name="FlappyPoints" id="FlappyPoints" onClick="getElementByID('Flappy-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Cryptonoid</td>
@@ -75,7 +75,7 @@
           <option value ="1568"> 9 </option>
           <option value ="1600"> 10 </option>
           </select></td>
-           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Cryptonoid-lvl').innerHTML"></td>
+           <td><input type="text" name="CryptonoidPoints" id="CryptonoidPoints" onClick="getElementByID('Cryptonoid-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Coin-Match</td>
@@ -91,7 +91,7 @@
           <option value ="1020"> 9 </option>
           <option value ="1035"> 10 </option>
           </select></td>
-           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Match-lvl').innerHTML"></td>
+           <td><input type="text" name="MatchPoints" id="MatchPoints" onClick="getElementByID('Match-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Crypto Hamster</td>
@@ -107,7 +107,7 @@
           <option value ="Unknown"> 9 </option>
           <option value ="Unknown"> 10 </option>
           </select></td>
-           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Crypto-lvl').innerHTML"></td>
+           <td><input type="text" name="CryptoPoints" id="CryptoPoints" onClick="getElementByID('Crypto-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>2048 Coins</td>
@@ -123,7 +123,7 @@
           <option value ="Unknown"> 9 </option>
           <option value ="Unknown"> 10 </option>
           </select></td>
-           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('2048-lvl').innerHTML"></td>
+           <td><input type="text" name="2048Points" id="2048Points" onClick="getElementByID('2048-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Coin-Flip</td>
@@ -139,7 +139,7 @@
           <option value ="1580"> 9 </option>
           <option value ="1600"> 10 </option>
           </select></td>
-           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Flip-lvl').innerHTML"></td>
+           <td><input type="text" name="FlipPoints" id="FlipPoints" onClick="getElementByID('Flip-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Dr. Hamster</td>
@@ -155,7 +155,7 @@
           <option value ="1404"> 9 </option>
           <option value ="1440"> 10 </option>
           </select></td>
-           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Dr-lvl').innerHTML"></td>
+           <td><input type="text" name="DrPoints" id="DrPoints" onClick="getElementByID('Dr-lvl').innerHTML"></td>
         </tr>
         <tr>
         <td>Token Surfer</td>
@@ -171,7 +171,7 @@
           <option value ="Unknown"> 9 </option>
           <option value ="Unknown"> 10 </option>
           </select></td>
-           <td><input type="text" name="lvl" id="lvl" onClick="getElementByID('Surfer-lvl').innerHTML"></td>
+           <td><input type="text" name="SurferPoints" id="SurferPoints" onClick="getElementByID('Surfer-lvl').innerHTML"></td>
         </tr>
       </tbody>
     </table>
