--- a/index.htm
+++ b/index.htm
@@ -179,7 +179,7 @@
   <script>
         
         var select = document.getElementById('Coinclick-lvl');
-        var input = document.getElementById('lvl');
+        var input = document.getElementById();
               select.onchange = function() {
               input.value = select.value;
               }
