--- a/index.htm
+++ b/index.htm
@@ -179,7 +179,7 @@
   <script>
         
         var select = document.getElementById('Coinclick-lvl');
-        var input = select.options[input.selectedIndex].text;
+        var input = select.target.options[select.target.selectedIndex].text;
         
     /*var select = document.getElementById('Coinclick-lvl');
         var input = document.getElementById('CoinPoints'); */
