--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
       <tbody>
         <tr>
         <td>Coinclick</td>
-        <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl" onchange="getSelectValue();">
+        <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl" onchange="function();">
           <option value="600" selected> 1 </option>
           <option value ="640"> 2 </option>
           <option value ="680"> 3 </option>
