--- a/index.htm
+++ b/index.htm
@@ -183,9 +183,8 @@
         
     /*var select = document.getElementById('Coinclick-lvl');
         var input = document.getElementById('CoinPoints'); */
-              select.onchange = function Clicked() {
-              input.value = select.value;
-              }
+  function Clicked() {
+      input.value = select.value;}
 
     </script>
       
