--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     <script>
         function CoinSelect(){
         var d=document.getElementById("Coinclick-lvl");
-        var displaytext = d.options[d.SelectedIndex].text;
+        var displaytext = d.options[d.SelectedIndex].value;
         document.getElementById("CoinPoints").value=displaytext;
         }
         
