--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
         <tr>
         <td>Coinclick</td>
         <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl" onchange="CoinSelect();">
-          <option value="600" selected> 1 </option>
+          <option value="600" selected="selected"> 1 </option>
           <option value ="640"> 2 </option>
           <option value ="680"> 3 </option>
           <option value ="700"> 4 </option>
