--- a/index.htm
+++ b/index.htm
@@ -41,7 +41,7 @@
           <option value ="840"> 9 </option>
           <option value ="880"> 10 </option>
           </select></td>
-          <td><input type="text" name="CoinPoints" id="CoinPoints"></td>
+          <td><input type="text" name="CoinPoints" id="CoinPoints" onclick="CoinSelect();"></td>
         </tr>
       <tr>
         <td>Token Blaster</td>
