--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
         function CoinSelect()
       { 
        document.getElementById("CoinPoints").value=
-       document.getElementById("Coinclick-lvl");
+       document.getElementById("Coinclick-lvl").value;
       }
 
     </script>
