--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,8 @@
         <tr>
         <td>Coinclick</td>
         <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl" onclick="CoinSelect();">
-          <option value="600" selected="selected"> 1 </option>
+          <option value ="Points"> Lvls </option>
+          <option value ="600"> 1 </option>
           <option value ="640"> 2 </option>
           <option value ="680"> 3 </option>
           <option value ="700"> 4 </option>
