--- a/index.htm
+++ b/index.htm
@@ -41,10 +41,10 @@
        document.getElementById("Crypto-lvl").value;
       }
       
-      function 2048Select()
+      function TwentyFourtyEightSelect()
       { 
-       document.getElementById("2048Points").value=
-       document.getElementById("2048-lvl").value;
+       document.getElementById("TwentyFourtyEightPoints").value=
+       document.getElementById("TwentyFourtyEight-lvl").value;
       }
       
       function FlipSelect()
@@ -180,7 +180,7 @@
         </tr>
         <tr>
         <td>2048 Coins</td>
-        <td><select size="1" id="2048-lvl" name="2048-lvl" onclick="2048Select();">
+        <td><select size="1" id="TwentyFourtyEight-lvl" name="TwentyFourtyEight-lvl" onclick="TwentyFourtyEightSelect();">
           <option> Lvls </option>
           <option value="800"> 1 </option>
           <option value ="850"> 2 </option>
@@ -193,7 +193,7 @@
           <option value ="Unknown"> 9 </option>
           <option value ="Unknown"> 10 </option>
           </select></td>
-           <td><input type="text" name="2048Points" id="2048Points" value="Points"></td>
+           <td><input type="text" name="TwentyFourtyEightPoints" id="TwentyFourtyEightPoints" value="Points"></td>
         </tr>
         <tr>
         <td>Coin-Flip</td>
