--- a/index.htm
+++ b/index.htm
@@ -79,7 +79,7 @@
         <tr>
         <td>Coinclick</td>
         <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl" onclick="CoinSelect();">
-          <option> Lvls </option>
+          <option value ="Points"> Lvls </option>
           <option value ="600"> 1 </option>
           <option value ="640"> 2 </option>
           <option value ="680"> 3 </option>
@@ -96,7 +96,7 @@
       <tr>
         <td>Token Blaster</td>
         <td><select size="1" id="Blaster-lvl" name="Blaster-lvl" onclick="BlasterSelect();">
-          <option> Lvls </option>
+          <option value ="Points"> Lvls </option>
           <option value="700"> 1 </option>
           <option value ="756"> 2 </option>
           <option value ="812"> 3 </option>
@@ -113,7 +113,7 @@
         <tr>
           <td>Flappy Rocket</td>
           <td><select size="1" id="Flappy-lvl" name="Flappy-lvl" onclick="FlappySelect();">
-          <option> Lvls </option>
+          <option value ="Points"> Lvls </option>
           <option value="704"> 1 </option>
           <option value ="768"> 2 </option>
           <option value ="819"> 3 </option>
@@ -130,7 +130,7 @@
         <tr>
         <td>Cryptonoid</td>
         <td><select size="1" id="Cryptonoid-lvl" name="Cryptonoid-lvl" onclick="CryptonoidSelect();">
-          <option> Lvls </option>
+          <option value ="Points"> Lvls </option>
           <option value="912"> 1 </option>
           <option value ="936"> 2 </option>
           <option value ="984"> 3 </option>
@@ -147,7 +147,7 @@
         <tr>
         <td>Coin-Match</td>
         <td><select size="1" id="Match-lvl" name="Match-lvl" onclick="MatchSelect();">
-          <option> Lvls </option>
+          <option value ="Points"> Lvls </option>
           <option value="720"> 1 </option>
           <option value ="793"> 2 </option>
           <option value ="806"> 3 </option>
@@ -164,7 +164,7 @@
         <tr>
         <td>Crypto Hamster</td>
         <td><select size="1" id="Crypto-lvl" name="Crypto-lvl" onclick="CryptoSelect();">
-          <option> Lvls </option>
+          <option value ="Points"> Lvls </option>
           <option value="900"> 1 </option>
           <option value ="959"> 2 </option>
           <option value ="1021"> 3 </option>
@@ -181,7 +181,7 @@
         <tr>
         <td>2048 Coins</td>
         <td><select size="1" id="TwentyFourtyEight-lvl" name="TwentyFourtyEight-lvl" onclick="TwentyFourtyEightSelect();">
-          <option> Lvls </option>
+          <option value ="Points"> Lvls </option>
           <option value="800"> 1 </option>
           <option value ="850"> 2 </option>
           <option value ="900"> 3 </option>
@@ -198,7 +198,7 @@
         <tr>
         <td>Coin-Flip</td>
         <td><select size="1" id="Flip-lvl" name="Flip-lvl" onclick="FlipSelect();">
-          <option> Lvls </option>
+          <option value ="Points"> Lvls </option>
           <option value="900"> 1 </option>
           <option value ="912"> 2 </option>
           <option value ="912"> 3 </option>
@@ -215,7 +215,7 @@
         <tr>
         <td>Dr. Hamster</td>
         <td><select size="1" id="Dr-lvl" name="Dr-lvl" onclick="DrSelect();">
-          <option> Lvls </option>
+          <option value ="Points"> Lvls </option>
           <option value="896"> 1 </option>
           <option value ="981"> 2 </option>
           <option value ="1059"> 3 </option>
@@ -232,7 +232,7 @@
         <tr>
         <td>Token Surfer</td>
         <td><select size="1" id="Surfer-lvl" name="Surfer-lvl" onclick="SurferSelect();">
-          <option> Lvls </option>
+          <option value ="Points"> Lvls </option>
           <option value="840"> 1 </option>
           <option value ="Unknown"> 2 </option>
           <option value ="Unknown"> 3 </option>
