--- a/index.htm
+++ b/index.htm
@@ -89,7 +89,7 @@
         <tr>
         <td>Coinclick</td>
         <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl" onclick="CoinSelect();TripleCoin();">
-          <option value ="Points"> Lvls </option>
+          <option value ="none"> Lvls </option>
           <option value ="600"> 1 </option>
           <option value ="640"> 2 </option>
           <option value ="680"> 3 </option>
