--- a/index.htm
+++ b/index.htm
@@ -91,7 +91,7 @@
         <tr>
         <td>Coinclick</td>
         <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl" onclick="CoinSelect();TripleCoin();">
-          <option value ="none"> Lvls </option>
+          <option value ="0"> Lvls </option>
           <option value ="600"> 1 </option>
           <option value ="640"> 2 </option>
           <option value ="680"> 3 </option>
@@ -104,12 +104,12 @@
           <option value ="880"> 10 </option>
           </select></td>
           <td><input type="text" name="CoinPoints" id="CoinPoints" value=""></td>
-          <td><input type="text" name="TripleCoin" id="TripleCoin" value="3 Wins"></td>
+          <td><input type="text" name="TripleCoin" id="TripleCoin" value="0"></td>
         </tr>
       <tr>
         <td>Token Blaster</td>
         <td><select size="1" id="Blaster-lvl" name="Blaster-lvl" onclick="BlasterSelect();">
-          <option value =""> Lvls </option>
+          <option value ="0"> Lvls </option>
           <option value="700"> 1 </option>
           <option value ="756"> 2 </option>
           <option value ="812"> 3 </option>
@@ -121,7 +121,7 @@
           <option value ="1200"> 9 </option>
           <option value ="2400"> 10 </option>
           </select></td>
-         <td><input type="text" name="BlasterPoints" id="BlasterPoints" value="Points"></td>
+         <td><input type="text" name="BlasterPoints" id="BlasterPoints" value="0"></td>
         </tr>
         <tr>
           <td>Flappy Rocket</td>
