--- a/index.htm
+++ b/index.htm
@@ -248,7 +248,7 @@
           <option value ="Points"> Lvls </option>
           <option value="840"> 1 </option>
           <option value ="910"> 2 </option>
-          <option value ="Unknown"> 3 </option>
+          <option value ="980"> 3 </option>
           <option value ="Unknown"> 4 </option>
           <option value ="Unknown"> 5 </option>
           <option value ="Unknown"> 6 </option>
