--- a/index.htm
+++ b/index.htm
@@ -103,7 +103,7 @@
           <option value ="840"> 9 </option>
           <option value ="880"> 10 </option>
           </select></td>
-          <td><input type="text" name="CoinPoints" id="CoinPoints" value=""></td>
+          <td><input type="text" name="CoinPoints" id="CoinPoints" value="0"></td>
           <td><input type="text" name="TripleCoin" id="TripleCoin" value="0"></td>
         </tr>
       <tr>
